Fix z-index (#73)

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -165,6 +165,7 @@ main .hero-footer {
 main .hero-footer.scrolled {
   position: fixed;
   top: 70px;
+  z-index: 5;
 }
 
 main .hero-footer h3 {
